--- a/nyehehehe.html
+++ b/nyehehehe.html
@@ -1,2 +1,24 @@
-<!DOCTYPE html>
-<a>sajia suka makan daging</a>
+<html>
+<head>
+<title>belajar html</title>
+</head>
+<body>
+<table border="1">
+
+<tr>
+<th>Makanan</th>
+<th>Minuman</th>
+
+</tr>
+<td>bakso</td>
+<td>es teh</td>
+</tr>
+
+<tr>
+<td>sate</td>
+<td>sirup</td>
+</tr>
+
+</table>
+</body>
+</html>
